--- a/content/data/config.json
+++ b/content/data/config.json
@@ -30,7 +30,8 @@
                 "url": "/contact",
                 "style": "primary"
             }
-        ]
+        ],
+        "logo": "images/Logo.png"
     },
     "footer": {
         "has_nav": true,
